# stepik_django

./: pyproject.toml
config/: settings.py  urls.py
products/: admin.py  models.py  urls.py  views.py
products/fixtures/: products_data.json
products/management/commands/: fill_database.py
products/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_options_alter_productcategory_options.py  0004_product_color_product_manufacturer.py  0005_alter_product_price.py  0006_product_test.py  0007_remove_product_test.py
products/templates/products/: base.html  index.html  products.html
