[tool.poetry]
name = "stepik-django-project"
version = "0.1.0"
description = ""
authors = ["Kostin Igor <grizzlygit777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.15"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"


[tool.poetry.group.def.dependencies]
ipython = "^8.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
